Fix: optimizing css and fix the avatar at home section on mobile screen #time 1h

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -6,24 +6,23 @@
         margin-top:10vh;
         text-align:center;
     }
-    div.img-rounded-circle img{
+    div.img-rounded-circle .MuiAvatar-root{
         width: 300px;
         height: 300px;
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
     div.myhome {
-        background-color:#ffffff;
         height: 100%;
         padding-top: 10vh;
     }
     div.myabout{
         height:100%;
         padding-top:10vh;
-        background-color:#ffffff;
     }
     div.myeducation{
         height:100%;
         padding-top:10vh;
-        background-color:#ffffff;
     }
     img.i-publication{
         width: 300px;
