--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,5 +1,5 @@
 .myhome {
-    background-color:#ffffff;
+    background-color:rgb(255,255,255);
     height: 100vh;
     padding-top: 25vh;
 }
